added dicts and implemented text substitution

--- a/about-us.html
+++ b/about-us.html
@@ -1,109 +1,132 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>About Us</title>
-    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon">
-    <meta name="description" content=""/>
+    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon" />
+    <meta name="description" content="" />
     <link
-            href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
-            rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
+      rel="stylesheet"
     />
-    <link href="default.css" rel="stylesheet" type="text/css" media="all"/>
-</head>
-<body>
-<div id="header-wrapper">
-    <div id="header" class="container">
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+  <body>
+    <div id="header-wrapper">
+      <div id="header" class="container">
         <div class="header-background"></div>
 
         <div id="logo">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo"/>
-            </a>
+          <a href="index.html">
+            <img src="images/no_background_logo.png" alt="Logo" />
+          </a>
         </div>
 
         <div id="menu">
-            <ul>
-                <li>
-                    <a href="index.html" accesskey="1" title="">Home</a>
-                </li>
-                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li class="current_page_item"><a href="about-us.html" accesskey="3" title="">About Us</a></li>
-                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
-            </ul>
+          <ul>
+            <li>
+              <a href="index.html" accesskey="1" title="" id="home"></a>
+            </li>
+            <li>
+              <a
+                href="the-centre.html"
+                accesskey="2"
+                title=""
+                id="the_centre"
+              ></a>
+            </li>
+            <li class="current_page_item">
+              <a href="about-us.html" accesskey="3" title="" id="about_us"></a>
+            </li>
+            <li>
+              <a href="contact.html" accesskey="4" title="" id="contact"></a>
+            </li>
+            <li>
+              <a
+                href="supporters.html"
+                accesskey="5"
+                title=""
+                id="supporters"
+              ></a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
-<div id="wrapper1">
-    <div class="wrapper-container">
+    <div id="wrapper1">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section">
-                <div class="content">
-                    <p>
-                        <b>Saith Seren</b> is a local cooperative in Wrexham town centre. The Welsh centre was established 10 years, unfortunately in 2015 the centre was at risk of closure. Due to the generosity of businesses and people across the globe the centre was saved from closure, people across the globe still help to keep the centre going. The centre will be growing and developing further in the future.
-                    </p>
-                </div>
-                <h3 class="subtitle">The story of the establishment of Saith Seren</h3>
-                <div class="content">
-                    <p>
-                        Saith Seren, Wrexham's Welsh Centre, opened in 2012, following the National Eisteddfod's visit to Wrexham in Summer 2011. The 'Seven Stars' pub had been vacant for 18 months, and local Councillor Marc Jones came up with the idea of re-open it as a Welsh Centre in order to build on the increased interest and pride in the language as a result of the Eisteddfod. He set up a Community Co-operative Company with a Management Board and shareholders. He persuaded Clwyd Alyn Housing Association to buy and renovate the listed building, which was then rented by the co-operative. 'Saith Seren' opened at the end of January 2012.
-                    </p>
-                </div>
-                <h3 class="subtitle">The purpose of the Centre</h3>
-                <div class="content">
-                    <p>
-                        'Saith' is a centre for anyone who is proud to be, or interested in Welsh, to socialize and celebrate our culture. It provides a venue for Welsh language activities such as gigs, and sporting events on television with Welsh commentary on S4C. Clwb Clebran, every Thursday evening, gives Welsh language learners the opportunity to practice in an informal atmosphere outside the classroom. There are also many non-Welsh language activities e.g. darts, live bands on a Saturday night, but even on those nights, the Welsh spirit and culture is evident.
-                    </p>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
-<div id="wrapper4">
-    <div class="wrapper-container footer">
-        <div class="column">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo" class="footer-logo">
-            </a>
-            <a href="https://www.facebook.com/saithseren1" target="_blank" class="facebook-icon">
-                <img src="images/icons/facebook.svg" alt="Facebook" class="facebook-icon">
-            </a>
-        </div>
-        <div class="column">
-            <h3 class="subtitle-footer">The Pub</h3>
+          <div class="section">
             <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
+              <p id="about_us1"></p>
             </div>
+            <h3 class="subtitle" id="about_us2"></h3>
+            <div class="content">
+              <p id="about_us3"></p>
+            </div>
+            <h3 class="subtitle" id="about_us4"></h3>
+            <div class="content">
+              <p id="about_us5"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="wrapper4">
+      <div class="wrapper-container footer">
+        <div class="column">
+          <a href="index.html">
+            <img
+              src="images/no_background_logo.png"
+              alt="Logo"
+              class="footer-logo"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/saithseren1"
+            target="_blank"
+            class="facebook-icon"
+          >
+            <img
+              src="images/icons/facebook.svg"
+              alt="Facebook"
+              class="facebook-icon"
+            />
+          </a>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">Board</h3>
-            <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
-            </div>
+          <h3 class="subtitle-footer" id="the_pub"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
         </div>
+        <div class="column">
+          <h3 class="subtitle-footer" id="board"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
-</body>
+    <script src="locale.js" type="text/javascript"></script>
+  </body>
 </html>
