--- a/supporters.html
+++ b/supporters.html
@@ -25,22 +25,40 @@
 
         <div id="menu">
             <ul>
-                <li>
-                    <a href="index.html" accesskey="1" title="">Home</a>
-                </li>
-                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
-                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li class="current_page_item"><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
+              <li>
+                <a href="index.html" accesskey="1" title="" id="home"></a>
+              </li>
+              <li>
+                <a
+                  href="the-centre.html"
+                  accesskey="2"
+                  title=""
+                  id="the_centre"
+                ></a>
+              </li>
+              <li>
+                <a href="about-us.html" accesskey="3" title="" id="about_us"></a>
+              </li>
+              <li>
+                <a href="contact.html" accesskey="4" title="" id="contact"></a>
+              </li>
+              <li class="current_page_item">
+                <a 
+                  href="supporters.html"
+                  accesskey="5"
+                  title=""
+                  id="supporters"
+                ></a>
+              </li>
             </ul>
-        </div>
+          </div>
     </div>
 </div>
 <div id="wrapper1">
     <div class="wrapper-container">
         <div class="column">
             <div class="section">
-                <h3 class="subtitle">These are the businesses that helped keep Saith Seren open. Please support them!</h3>
+                <h3 class="subtitle" id="supporters_text"></h3>
                 <div class="content">
                     <p>
                         <a href="https://www.reesjeweller.co.uk/" target="_blank" class="section-link">Martin Rees Jewellers</a> <br/>
@@ -59,7 +77,7 @@
 
                         <a href="https://www.saysomethingin.com/en/home/" target="_blank" class="section-link">SaySomethinginWelsh.com</a> <br/>
 
-                        <a href=https://www.hsbc.co.uk/" target="_blank" class="section-link">HSBC</a> <br/>
+                        <a href=https://www.hsbc.co.uk/ target="_blank" class="section-link">HSBC</a> <br/>
                     </p>
                 </div>
             </div>
@@ -79,7 +97,7 @@
             </a>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">The Pub</h3>
+            <h3 class="subtitle-footer" id="the_pub"></h3>
             <div class="content">
                 <p>
                     Y Saith Seren <br/>
@@ -93,7 +111,7 @@
             </div>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">Board</h3>
+            <h3 class="subtitle-footer" id="board"></h3>
             <div class="content">
                 <p>
                     Y Saith Seren <br/>
@@ -109,6 +127,6 @@
     </div>
 </div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
+<script src="locale.js" type="text/javascript"></script>
 </body>
 </html>
