--- a/contact.html
+++ b/contact.html
@@ -1,124 +1,162 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Contact</title>
-    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon">
-    <meta name="description" content=""/>
+    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon" />
+    <meta name="description" content="" />
     <link
-            href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
-            rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
+      rel="stylesheet"
     />
-    <link href="default.css" rel="stylesheet" type="text/css" media="all"/>
-</head>
-<body>
-<div id="header-wrapper">
-    <div id="header" class="container">
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+  <body>
+    <div id="header-wrapper">
+      <div id="header" class="container">
         <div class="header-background"></div>
 
         <div id="logo">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo"/>
-            </a>
+          <a href="index.html">
+            <img src="images/no_background_logo.png" alt="Logo" />
+          </a>
         </div>
 
         <div id="menu">
-            <ul>
-                <li>
-                    <a href="index.html" accesskey="1" title="">Home</a>
-                </li>
-                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
-                <li class="current_page_item"><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
-            </ul>
+          <ul>
+            <li>
+              <a href="index.html" accesskey="1" title="" id="home"></a>
+            </li>
+            <li>
+              <a
+                href="the-centre.html"
+                accesskey="2"
+                title=""
+                id="the_centre"
+              ></a>
+            </li>
+            <li>
+              <a href="about-us.html" accesskey="3" title="" id="about_us"></a>
+            </li>
+            <li class="current_page_item">
+              <a href="contact.html" accesskey="4" title="" id="contact"></a>
+            </li>
+            <li>
+              <a
+                href="supporters.html"
+                accesskey="5"
+                title=""
+                id="supporters"
+              ></a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
-<div id="wrapper1">
-    <div class="wrapper-container">
+    <div id="wrapper1">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section map-section">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.515727084381!2d-2.9944593237639943!3d53.04704029707674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1suk!2suk!4v1704758345830!5m2!1suk!2suk"
-                        width="600"
-                        height="450"
-                        style="border:0;"
-                        allowfullscreen=""
-                        loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade">
-                </iframe>
-            </div>
+          <div class="section map-section">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2398.515727084381!2d-2.9944593237639943!3d53.04704029707674!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487ac71d2fc0a0cb%3A0x3fc094f30db4bbaa!2sSaith%20Seren!5e0!3m2!1suk!2suk!4v1704758345830!5m2!1suk!2suk"
+              width="600"
+              height="450"
+              style="border: 0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            >
+            </iframe>
+          </div>
         </div>
 
         <div class="column">
-            <div class="section">
-                <h3 class="subtitle">Contact</h3>
-                <div class="content">
-                    <p>
-                        Y Saith Seren <br/>
-
-                        Canolfan Gymraeg Wrecsam <br/>
-
-                        18 Chester Street <br/>
-
-                        Wrecsam <br/>
-
-                        LL13 8BG <br/>
-
-                        01978 447006 <br/>
-
-                        Chair (C. Evans) 07885567512 <br/>
-
-                        Facebook - <a href="https://www.facebook.com/saithseren1" target="_blank" class="section-link">https://www.facebook.com/saithseren1</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div id="wrapper4">
-    <div class="wrapper-container footer">
-        <div class="column">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo" class="footer-logo">
-            </a>
-            <a href="https://www.facebook.com/saithseren1" target="_blank" class="facebook-icon">
-                <img src="images/icons/facebook.svg" alt="Facebook" class="facebook-icon">
-            </a>
-        </div>
-        <div class="column">
-            <h3 class="subtitle-footer">The Pub</h3>
+          <div class="section">
+            <h3 class="subtitle" id="contact1"></h3>
             <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
+              <p>
+                Y Saith Seren <br />
+
+                Canolfan Gymraeg Wrecsam <br />
+
+                18 Chester Street <br />
+
+                Wrecsam <br />
+
+                LL13 8BG <br />
+
+                01978 447006 <br />
+
+                Chair (C. Evans) 07885567512 <br />
+
+                Facebook -
+                <a
+                  href="https://www.facebook.com/saithseren1"
+                  target="_blank"
+                  class="section-link"
+                  >https://www.facebook.com/saithseren1</a
+                >
+              </p>
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="wrapper4">
+      <div class="wrapper-container footer">
+        <div class="column">
+          <a href="index.html">
+            <img
+              src="images/no_background_logo.png"
+              alt="Logo"
+              class="footer-logo"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/saithseren1"
+            target="_blank"
+            class="facebook-icon"
+          >
+            <img
+              src="images/icons/facebook.svg"
+              alt="Facebook"
+              class="facebook-icon"
+            />
+          </a>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">Board</h3>
-            <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
-            </div>
+          <h3 class="subtitle-footer" id="the_pub"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
         </div>
+        <div class="column">
+          <h3 class="subtitle-footer" id="board"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
-</div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
-</body>
+    <script src="locale.js" type="text/javascript"></script>
+  </body>
 </html>
