--- a/index.html
+++ b/index.html
@@ -1,246 +1,273 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Home</title>
-    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon">
-    <meta name="description" content=""/>
+    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon" />
+    <meta name="description" content="" />
     <link
-            href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
-            rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
+      rel="stylesheet"
     />
-    <link href="default.css" rel="stylesheet" type="text/css" media="all"/>
-</head>
-<body>
-<div id="header-wrapper">
-    <div id="header" class="container">
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+  <body>
+    <div id="header-wrapper">
+      <div id="header" class="container">
         <div class="header-background"></div>
-
         <div id="logo">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo"/>
-            </a>
+          <a href="index.html">
+            <img src="images/no_background_logo.png" alt="Logo" />
+          </a>
         </div>
 
         <div id="menu">
-            <ul>
-                <li class="current_page_item">
-                    <a href="index.html" accesskey="1" title="">Home</a>
-                </li>
-                <li><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
-                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
-            </ul>
+          <ul>
+            <li class="current_page_item">
+              <a href="index.html" accesskey="1" title="" id="home"></a>
+            </li>
+            <li>
+              <a
+                href="the-centre.html"
+                accesskey="2"
+                title=""
+                id="the_centre"
+              ></a>
+            </li>
+            <li>
+              <a href="about-us.html" accesskey="3" title="" id="about_us"></a>
+            </li>
+            <li>
+              <a href="contact.html" accesskey="4" title="" id="contact"></a>
+            </li>
+            <li>
+              <a
+                href="supporters.html"
+                accesskey="5"
+                title=""
+                id="supporters"
+              ></a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
-<div id="wrapper1">
-    <div class="wrapper-container">
+    <div id="wrapper1">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section">
-                <h3 class="subtitle">Welcome, friend!</h3>
-                <div class="content">
-                    <p>
-                        Saith Seren's aim is to provide a venue for Welsh speakers, learners and  supporters of the language and culture to mingle and socialise.  There are many events including Welsh and English entertainment, Welsh lessons or simply an opportunity to spend some leisurely time with friends.
-                    </p>
-                    <p>
-                        Y Saith Seren <br/>
+          <div class="section">
+            <h3 class="subtitle" id="welcome"></h3>
+            <div class="content">
+              <p id="welcome_text"></p>
+              <p>
+                Y Saith Seren <br />
 
-                        Canolfan Gymraeg Wrecsam <br/>
+                Canolfan Gymraeg Wrecsam <br />
 
-                        18 Chester Street <br/>
+                18 Chester Street <br />
 
-                        Wrecsam <br/>
+                Wrecsam <br />
 
-                        LL13 8BG <br/>
+                LL13 8BG <br />
 
-                        01978 447006 <br/>
+                01978 447006 <br />
 
-                        Chair (C. Evans) 07885567512 <br/>
+                Chair (C. Evans) 07885567512 <br />
 
-                        Facebook - <a href="https://www.facebook.com/saithseren1" target="_blank" class="section-link">https://www.facebook.com/saithseren1</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="column">
-
-            <div class="section">
-                <h3 class="subtitle">Support Seith Seren</h3>
-                <div class="content">
-                    <p>
-                        Become a member of Saith Seren for £10 a month, support us in our aim to promote Welsh language and culture.
-                    </p>
-                </div>
-            </div>
-
-            <div class="support-button-section">
-                <!-- New third section content goes here -->
+                Facebook -
                 <a
-                        href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
-                        class="button button-link"
-                >Support / Contribute</a
+                  href="https://www.facebook.com/saithseren1"
+                  target="_blank"
+                  class="section-link"
+                  >https://www.facebook.com/saithseren1</a
                 >
+              </p>
             </div>
-
-            <div class="section">
-                <h3 class="subtitle">Opening hours</h3>
-                <div class="content">
-                    <p>
-                        Monday - Thursday / 6:30 - 11:00 <br/>
-                        Friday / 4:30 - 11:00 <br/>
-                        Saturday / 12:00 - Midnight
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="wrapper2">
-    <div class="wrapper-container">
-        <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Upcoming events</h3>
-                <div class="content" id="upcomingEventsContent">
-                    <!-- Data will be loaded here -->
-                </div>
-            </div>
+          </div>
         </div>
 
         <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle" style="margin-bottom: 25px">Newsletter signup</h3>
-                <div class="content">
-                    <form method="post" action="#" class="newsletter-signup-form">
-                        <input
-                                type="text"
-                                class="text"
-                                id="firstName"
-                                name="firstName"
-                                placeholder="First Name"
-                                required
-                        />
-                        <input
-                                type="text"
-                                class="text"
-                                id="lastName"
-                                name="lastName"
-                                placeholder="Last Name"
-                                required
-                        />
-                        <input
-                                type="email"
-                                class="text"
-                                id="email"
-                                name="email"
-                                placeholder="Email"
-                                required
-                        />
-                        <div class="button-response-container">
-                            <input
-                                    type="submit"
-                                    class="button email-button"
-                                    value="Sign up"
-                            />
-                            <div id="addEventResponse" class="response"></div>
-                        </div>
-                    </form>
-                </div>
+          <div class="section">
+            <h3 class="subtitle" id="support_seith_seren"></h3>
+            <div class="content">
+              <p id="support_seith_seren_text"></p>
             </div>
+          </div>
+
+          <div class="support-button-section">
+            <!-- New third section content goes here -->
+            <a
+              href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
+              class="button button-link"
+              id="sup_cont_btn"
+            ></a>
+          </div>
+
+          <div class="section">
+            <h3 class="subtitle" id="opening_hours"></h3>
+            <div class="content">
+              <p id="hours"></p>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<div id="wrapper3">
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
+    <div id="wrapper2">
+      <div class="wrapper-container">
+        <div class="column">
+          <div class="section section-wrapper2">
+            <h3 class="subtitle" id="upcoming_events"></h3>
+            <div class="content" id="upcomingEventsContent">
+              <!-- Data will be loaded here -->
+            </div>
+          </div>
+        </div>
+
+        <div class="column">
+          <div class="section section-wrapper2">
+            <h3
+              class="subtitle"
+              style="margin-bottom: 25px"
+              id="newsletter_signup"
+            ></h3>
+            <div class="content">
+              <form method="post" action="#" class="newsletter-signup-form">
+                <input
+                  type="text"
+                  class="text"
+                  id="firstName"
+                  name="firstName"
+                  required
+                />
+                <input
+                  type="text"
+                  class="text"
+                  id="lastName"
+                  name="lastName"
+                  required
+                />
+                <input
+                  type="email"
+                  class="text"
+                  id="email"
+                  name="email"
+                  required
+                />
+                <div class="button-response-container">
+                  <input
+                    type="submit"
+                    class="button email-button"
+                    id="signup"
+                  />
+                  <div id="addEventResponse" class="response"></div>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="wrapper3">
+      <!-- Slideshow container -->
+      <div class="slideshow-container">
         <div class="aspect-ratio-wrapper">
+          <!-- Full-width images with number and caption text -->
+          <div class="mySlides fade">
+            <img src="images/carousel/Saith Seren.jpg" style="width: 100%" />
+          </div>
 
-            <!-- Full-width images with number and caption text -->
-            <div class="mySlides fade">
-                <img src="images/carousel/Saith Seren.jpg" style="width:100%">
-            </div>
+          <div class="mySlides fade">
+            <img src="images/carousel/anniversary.jpg" style="width: 100%" />
+          </div>
 
-            <div class="mySlides fade">
-                <img src="images/carousel/anniversary.jpg" style="width:100%">
-            </div>
+          <div class="mySlides fade">
+            <img src="images/carousel/darts.jpg" style="width: 100%" />
+          </div>
 
-            <div class="mySlides fade">
-                <img src="images/carousel/darts.jpg" style="width:100%">
-            </div>
+          <div class="mySlides fade">
+            <img src="images/carousel/band.jpg" style="width: 100%" />
+          </div>
 
-            <div class="mySlides fade">
-                <img src="images/carousel/band.jpg" style="width:100%">
-            </div>
+          <div class="mySlides fade">
+            <img src="images/carousel/kids1.jpeg" style="width: 100%" />
+          </div>
 
-            <div class="mySlides fade">
-                <img src="images/carousel/kids1.jpeg" style="width:100%">
-            </div>
+          <div class="mySlides fade">
+            <img src="images/carousel/aviation.jpg" style="width: 100%" />
+          </div>
 
-            <div class="mySlides fade">
-                <img src="images/carousel/aviation.jpg" style="width:100%">
-            </div>
-
-            <!-- Next and previous buttons -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          <!-- Next and previous buttons -->
+          <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+          <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
-    </div>
-    <br>
+      </div>
+      <br />
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
+      <!-- The dots/circles -->
+      <div style="text-align: center">
         <span class="dot" onclick="currentSlide(1)"></span>
         <span class="dot" onclick="currentSlide(2)"></span>
         <span class="dot" onclick="currentSlide(3)"></span>
         <span class="dot" onclick="currentSlide(4)"></span>
         <span class="dot" onclick="currentSlide(5)"></span>
         <span class="dot" onclick="currentSlide(6)"></span>
+      </div>
     </div>
-</div>
-<div id="wrapper4">
-    <div class="wrapper-container footer">
+    <div id="wrapper4">
+      <div class="wrapper-container footer">
         <div class="column">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo" class="footer-logo">
-            </a>
-            <a href="https://www.facebook.com/saithseren1" target="_blank" class="facebook-icon">
-                <img src="images/icons/facebook.svg" alt="Facebook" class="facebook-icon">
-            </a>
+          <a href="index.html">
+            <img
+              src="images/no_background_logo.png"
+              alt="Logo"
+              class="footer-logo"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/saithseren1"
+            target="_blank"
+            class="facebook-icon"
+          >
+            <img
+              src="images/icons/facebook.svg"
+              alt="Facebook"
+              class="facebook-icon"
+            />
+          </a>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">The Pub</h3>
-            <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
-            </div>
+          <h3 class="subtitle-footer" id="the_pub"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">Board</h3>
-            <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
-            </div>
+          <h3 class="subtitle-footer" id="board"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
         </div>
+      </div>
     </div>
-</div>
 
-<script src="index.js" type="text/javascript"></script>
-</body>
+    <script src="index.js" type="text/javascript"></script>
+    <script src="locale.js" type="text/javascript"></script>
+  </body>
 </html>
