--- a/the-centre.html
+++ b/the-centre.html
@@ -1,189 +1,205 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>The centre</title>
-    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon">
-    <meta name="description" content=""/>
+    <link rel="icon" href="images/icons/website-icon.png" type="image/x-icon" />
+    <meta name="description" content="" />
     <link
-            href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
-            rel="stylesheet"
+      href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900"
+      rel="stylesheet"
     />
-    <link href="default.css" rel="stylesheet" type="text/css" media="all"/>
-</head>
-<body>
-<div id="header-wrapper">
-    <div id="header" class="container">
+    <link href="default.css" rel="stylesheet" type="text/css" media="all" />
+  </head>
+  <body>
+    <div id="header-wrapper">
+      <div id="header" class="container">
         <div class="header-background"></div>
 
         <div id="logo">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo"/>
-            </a>
+          <a href="index.html">
+            <img src="images/no_background_logo.png" alt="Logo" />
+          </a>
         </div>
 
         <div id="menu">
-            <ul>
-                <li>
-                    <a href="index.html" accesskey="1" title="">Home</a>
-                </li>
-                <li class="current_page_item"><a href="the-centre.html" accesskey="2" title="">The centre</a></li>
-                <li><a href="about-us.html" accesskey="3" title="">About Us</a></li>
-                <li><a href="contact.html" accesskey="4" title="">Contact</a></li>
-                <li><a href="supporters.html" accesskey="5" title="">Supporters</a></li>
-            </ul>
+          <ul>
+            <li>
+              <a href="index.html" accesskey="1" title="" id="home"></a>
+            </li>
+            <li class="current_page_item">
+              <a
+                href="the-centre.html"
+                accesskey="2"
+                title=""
+                id="the_centre"
+              ></a>
+            </li>
+            <li>
+              <a href="about-us.html" accesskey="3" title="" id="about_us"></a>
+            </li>
+            <li>
+              <a href="contact.html" accesskey="4" title="" id="contact"></a>
+            </li>
+            <li>
+              <a
+                href="supporters.html"
+                accesskey="5"
+                title=""
+                id="supporters"
+              ></a>
+            </li>
+          </ul>
         </div>
+      </div>
     </div>
-</div>
-<div id="wrapper1">
-    <div class="wrapper-container">
+    <div id="wrapper1">
+      <div class="wrapper-container">
         <div class="column">
-            <div class="section">
-                <h3 class="subtitle">Y Saith Seren’ - Welsh Centre</h3>
-                <div class="content">
-                    <p>
-                        The intention is to provide a focus for Welsh speakers, learners and supporters of the language
-                        and culture. There are many events including Welsh and English entertainment, Welsh lessons or a
-                        leisurely time with friends.
-                    </p>
-                    <p>
-                        Y Saith Seren <br/>
+          <div class="section">
+            <h3 class="subtitle" id="welsh_centre"></h3>
+            <div class="content">
+              <p id="welsh_centre_text"></p>
+              <p>
+                Y Saith Seren <br />
 
-                        Canolfan Gymraeg Wrecsam <br/>
+                Canolfan Gymraeg Wrecsam <br />
 
-                        18 Chester Street <br/>
+                18 Chester Street <br />
 
-                        Wrecsam <br/>
+                Wrecsam <br />
 
-                        LL13 8BG <br/>
+                LL13 8BG <br />
 
-                        01978 447006 <br/>
+                01978 447006 <br />
 
-                        Chair (C. Evans) 07885567512 <br/>
+                Chair (C. Evans) 07885567512 <br />
 
-                        Facebook - <a href="https://www.facebook.com/saithseren1" target="_blank" class="section-link">https://www.facebook.com/saithseren1</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-
-        <div class="column">
-
-            <div class="section">
-                <h3 class="subtitle">Support Seith Seren</h3>
-                <div class="content">
-                    <p>
-                        Become a member of Saith Seren for £10 a month, support us in our aim to promote Welsh language
-                        and culture.
-                    </p>
-                </div>
-            </div>
-
-            <div class="support-button-section">
-                <!-- New third section content goes here -->
+                Facebook -
                 <a
-                        href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
-                        class="button button-link"
-                >Support / Contribute</a
+                  href="https://www.facebook.com/saithseren1"
+                  target="_blank"
+                  class="section-link"
+                  >https://www.facebook.com/saithseren1</a
                 >
+              </p>
             </div>
-
-            <div class="section">
-                <h3 class="subtitle">Opening times</h3>
-                <div class="content">
-                    <p>
-                        Monday / Thursday 4:30 - 11:00 <br/>
-                        Friday / Saturday- 11:30 am - 1:00 am
-                    </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<div id="wrapper2">
-    <div class="wrapper-container">
-
-        <div class="column">
-            <div class="section section-wrapper2">
-                <h3 class="subtitle">Rooms available for rent</h3>
-                <div class="content">
-                    <p>
-                        We have 5 rooms available for rent from 1 hour or longer periods; <br/>
-
-                        Charities £5 per hour / Business Use £10 per hour <br/>
-
-                        Full details - 01978 447006 / 7seren@gmail.com
-                    </p>
-                </div>
-            </div>
+          </div>
         </div>
 
-    </div>
-</div>
-<div id="wrapper3">
-    <div class="wrapper-container">
         <div class="column">
-            <img src="images/brewers.jpg" alt="Brewers" class="centre-image">
-
-            <div class="section" style="margin-top: 20px">
-                <p>
-                    Two of our local brewers - Doug and Dave - at Saith Seren, Wrecsam to celebrate the new range of
-                    real ales on offer behind the bar.
-                </p>
-            </div>
-        </div>
-        <div class="column">
-            <div class="section" style="margin-bottom: 20px">
-                <p>
-                    An astonishing performance dedicated to the tenth anniversary of Seith Seren. Be sure to check out our calendar, so you don't miss future events like this.
-                </p>
-            </div>
-            <img src="images/10performance.jpg" alt="Brewers" class="centre-image">
-        </div>
-    </div>
-</div>
-<div id="wrapper4">
-    <div class="wrapper-container footer">
-        <div class="column">
-            <a href="index.html">
-                <img src="images/no_background_logo.png" alt="Logo" class="footer-logo">
-            </a>
-            <a href="https://www.facebook.com/saithseren1" target="_blank" class="facebook-icon">
-                <img src="images/icons/facebook.svg" alt="Facebook" class="facebook-icon">
-            </a>
-        </div>
-        <div class="column">
-            <h3 class="subtitle-footer">The Pub</h3>
+          <div class="section">
+            <h3 class="subtitle" id="support_seith_seren"></h3>
             <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
+              <p id="support_seith_seren_text"></p>
             </div>
+          </div>
+
+          <div class="support-button-section">
+            <!-- New third section content goes here -->
+            <a
+              href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
+              class="button button-link"
+              id="sup_cont_btn"
+            ></a>
+          </div>
+
+          <div class="section">
+            <h3 class="subtitle" id="opening_hours"></h3>
+            <div class="content">
+              <p id="hours_centre"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="wrapper2">
+      <div class="wrapper-container">
+        <div class="column">
+          <div class="section section-wrapper2">
+            <h3 class="subtitle" id="rooms"></h3>
+            <div class="content">
+              <p id="rooms_text"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div id="wrapper3">
+      <div class="wrapper-container">
+        <div class="column">
+          <img src="images/brewers.jpg" alt="Brewers" class="centre-image" />
+
+          <div class="section" style="margin-top: 20px">
+            <p id="centre_photo1"></p>
+          </div>
         </div>
         <div class="column">
-            <h3 class="subtitle-footer">Board</h3>
-            <div class="content">
-                <p>
-                    Y Saith Seren <br/>
-                    Canolfan Gymraeg Wrecsam <br/>
-                    18 Stryd Caer <br/>
-                    Wrecsam <br/>
-                    LL13 8BG <br/>
-                    01978 447006 <br/>
-                    <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
-                </p>
-            </div>
+          <div class="section" style="margin-bottom: 20px">
+            <p id="centre_photo2"></p>
+          </div>
+          <img
+            src="images/10performance.jpg"
+            alt="Brewers"
+            class="centre-image"
+          />
         </div>
+      </div>
     </div>
-</div>
+    <div id="wrapper4">
+      <div class="wrapper-container footer">
+        <div class="column">
+          <a href="index.html">
+            <img
+              src="images/no_background_logo.png"
+              alt="Logo"
+              class="footer-logo"
+            />
+          </a>
+          <a
+            href="https://www.facebook.com/saithseren1"
+            target="_blank"
+            class="facebook-icon"
+          >
+            <img
+              src="images/icons/facebook.svg"
+              alt="Facebook"
+              class="facebook-icon"
+            />
+          </a>
+        </div>
+        <div class="column">
+          <h3 class="subtitle-footer" id="the_pub"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
+        </div>
+        <div class="column">
+          <h3 class="subtitle-footer" id="board"></h3>
+          <div class="content">
+            <p>
+              Y Saith Seren <br />
+              Canolfan Gymraeg Wrecsam <br />
+              18 Stryd Caer <br />
+              Wrecsam <br />
+              LL13 8BG <br />
+              01978 447006 <br />
+              <a href="mailto:7seren@gmail.com">7seren@gmail.com</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!--<script src="index.js" type="text/javascript"></script>-->
-</body>
+    <script src="locale.js" type="text/javascript"></script>
+  </body>
 </html>
