made language switch (not 100% ready)

--- a/supporters.html
+++ b/supporters.html
@@ -50,6 +50,12 @@
                   id="supporters"
                 ></a>
               </li>
+
+                <li id="language-option">
+                    <a href="javascript:void(0)" id="langSwitch">
+                        <img id="currentLangIcon" src="images/icons/united-kingdom.png" alt="EN" />
+                    </a>
+                </li>
             </ul>
           </div>
     </div>
