--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
                 id="supporters"
               ></a>
             </li>
+
+            <li id="language-option">
+              <a href="javascript:void(0)" id="langSwitch">
+                <img id="currentLangIcon" src="images/icons/united-kingdom.png" alt="EN" />
+              </a>
+            </li>
+
           </ul>
         </div>
       </div>
