moved sections in index.html per Teri's wish

--- a/index.html
+++ b/index.html
@@ -96,25 +96,9 @@
 
         <div class="column">
           <div class="section">
-            <h3 class="subtitle" id="support_seith_seren"></h3>
-            <div class="content">
-              <p id="support_seith_seren_text"></p>
-            </div>
-          </div>
-
-          <div class="support-button-section">
-            <!-- New third section content goes here -->
-            <a
-              href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
-              class="button button-link"
-              id="sup_cont_btn"
-            ></a>
-          </div>
-
-          <div class="section">
-            <h3 class="subtitle" id="opening_hours"></h3>
-            <div class="content">
-              <p id="hours"></p>
+            <h3 class="subtitle" id="upcoming_events"></h3>
+            <div class="content" id="upcomingEventsContent">
+              <!-- Data will be loaded here -->
             </div>
           </div>
         </div>
@@ -124,9 +108,25 @@
       <div class="wrapper-container">
         <div class="column">
           <div class="section section-wrapper2">
-            <h3 class="subtitle" id="upcoming_events"></h3>
-            <div class="content" id="upcomingEventsContent">
-              <!-- Data will be loaded here -->
+            <h3 class="subtitle" id="support_seith_seren"></h3>
+            <div class="content">
+              <p id="support_seith_seren_text"></p>
+            </div>
+          </div>
+
+          <div class="support-button-section">
+            <!-- New third section content goes here -->
+            <a
+                    href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
+                    class="button button-link"
+                    id="sup_cont_btn"
+            ></a>
+          </div>
+
+          <div class="section section-wrapper2">
+            <h3 class="subtitle" id="opening_hours"></h3>
+            <div class="content">
+              <p id="hours"></p>
             </div>
           </div>
         </div>
