--- a/the-centre.html
+++ b/the-centre.html
@@ -102,7 +102,7 @@
             </div>
           </div>
 
-          <div class="support-button-section">
+          <div class="support-button-section centre-button">
             <!-- New third section content goes here -->
             <a
               href="https://pay.gocardless.com/billing/static/collect-customer-details?id=BRF000W9PTCQE7T34347HYJ2QV6ZM46M&initial=%2Fcollect-customer-details"
